[tool.poetry]
name = "torch-compile-inference"
version = "0.1.0"
description = "Local inference demos for NAFNet, RetinaFace, and SAM2 using the checked-in sources."
authors = ["Torch Compile <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.5.1"
torchvision = ">=0.20.1"
numpy = ">=1.24.4"
Pillow = ">=9.4.0"
opencv-python = ">=4.10.0.84"
hydra-core = ">=1.3.2"
omegaconf = ">=2.3.0"
iopath = ">=0.1.10"
tqdm = ">=4.66.1"
pyyaml = ">=6.0"
addict = ">=2.4.0"
future = ">=0.18.3"
lmdb = ">=1.4.1"
requests = ">=2.31.0"
scikit-image = ">=0.24.0"
scipy = ">=1.10.0"
tb-nightly = ">=2.18.0a"
yapf = ">=0.40.2"
onnx = ">=1.17.0"
onnxruntime = "1.19.0"

[tool.poetry.scripts]
inference-demo = "inference_demo:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
